Fix small scrolling and add nowrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 html {
-  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
